@@ -1,31 +1,36 @@
 package com.samj.backend;
 
-import java.util.Arrays;
+import com.samj.shared.CallForwardingDTO;
+import com.samj.shared.DatabaseAPI;
+
+import java.io.IOException;
 import java.util.List;
+import java.util.Set;
 
 // http://192.168.92.8:82/echo.php?called=123456
 public class Server {
-    public static List<String> list_features = Arrays.asList("forwardcheck");
-    private Database db;
+    public static List<String> listFeatures = List.of("timeBasedForwarding");
 
-    private int port;
+    private final int port;
     private HttpServer webServer;
+
+    private Set<CallForwardingDTO> timeBasedForwardingSet;
 
     public Server(int port) {
         this.port = port;
+        updateTimeBasedForwardingSet();
     }
 
-    public void start() {
-        db = new Database();
+    public void start() throws IOException {
         webServer = new HttpServer(this.port);
     }
 
     /**
-     * @param CalledNumber number incoming from tel
+     * @param calledNumber number incoming from tel
      * @return maybe throws Exception in future?
      */
-    static public String forwardcheck(String CalledNumber) {
-        System.out.println(CalledNumber);
+    static public String timeBasedForwarding(String calledNumber) {
+        System.out.println(calledNumber);
         String ForwardedNummer = "";
 
         //if(checkSyntaxNumber(CalledNumber) &&
@@ -37,19 +42,27 @@ public class Server {
         return "ERROR in logic!";
     }
 
-    private boolean checkSyntaxNumber(String CalledNumber) {
+    private boolean checkSyntaxNumber(String calledNumber) {
         return false;
     }
 
-    private boolean checkCalledNumberExists(String CalledNumber) {
+    private boolean checkCalledNumberExists(String calledNumber) {
         return false;
     }
 
-    private boolean isForwardingActive(String CalledNumber) {
+    private boolean isForwardingActive(String calledNumber) {
         return false;
     }
 
-    private String getForwardedNumber(String CalledNumber) {
+    private String getForwardedNumber(String calledNumber) {
         return "";
+    }
+
+
+    public Set<CallForwardingDTO> getTimeBasedForwardingSet() {
+        return timeBasedForwardingSet;
+    }
+    public void updateTimeBasedForwardingSet() {
+        timeBasedForwardingSet = DatabaseAPI.loadCallForwardingRecords();
     }
 }
